# roboboat_2026

./: .gitignore  CMakeLists.txt  Code Structure  Dockerfile  README.md  package.xml  setup.cfg  setup.py  usbLink.sh
API/GPS/: gps_node.py
API/LiDar/: 2Dproject.py  localcostmap.py
API/Motors/: t200.py  teensy.ino  teensy.py  tessny_light.ino
RoboBoat_2026/: Code Structure  package.xml
RoboBoat_2026/API/: __init__.py
RoboBoat_2026/Setup/: README.md  install_git.sh  install_gps_imu_libraries.sh  install_python_pip_simple.sh  install_pyusb_libusb.sh
RoboBoat_2026/Test_Scripts/: README.md
RoboBoat_2026/launch/: sensors.launch.py
RoboBoat_2026/tf/: tf_pub.py
Test_Scripts/: FTP.py  something.yaml
launch/: communication.launch.py  communication.py  localization.launch.py  mapping.launch.py  sensors.launch.py
roboboat_2026/: CMakeLists.txt  README.md  after  before  deviceHelper.py  deviceHelperTest.py  test.py  usbLink.sh
roboboat_2026/GNC/: info_core.py
roboboat_2026/Perception/: __init__.py
roboboat_2026/Setup/: install_open_cv.sh  install_python_from_source.sh  install_smopy.sh  v4ctl_setup.sh
roboboat_2026/Test_Scripts/: FTP.py
roboboat_2026/action/: FollowWaypoints.action
roboboat_2026/asta_robocommand/: README.md  package.xml  setup.cfg  setup.py
roboboat_2026/config/: barco.json  crusader.json  lidar_costmap.yaml  oakd_lr.yaml  roboboat.json
roboboat_2026/control/: robot_control.py
roboboat_2026/ivc/: client.py  client_test.py  ivc_api.py  ivc_node.py  server_test.py  test_ivc.py
roboboat_2026/launch/: sensors.launch.py
(+192 files in other folders)
