[develop]
script_dir=$base/lib/RoboBoat_2026
[install]
install_scripts=$base/lib/RoboBoat_2026

[options]
packages = 
    RoboBoat_2026
    RoboBoat_2026.API
    RoboBoat_2026.API.GPS
package_dir =
    RoboBoat_2026 = RoboBoat_2026

[options.entry_points]
console_scripts =
    tf_node = RoboBoat_2026.test_pub:main
    test_node = RoboBoat_2026.API.GPS.gps_node:main
