[develop]
script_dir=$base/lib/roboboat_2026

[install]
install_scripts=$base/lib/roboboat_2026

[options]
packages = find:
package_dir =
    = .
install_requires =
    setuptools
zip_safe = True

[options.entry_points]
console_scripts =
    tf_node = roboboat_2026.test_pub:main
    test_node = roboboat_2026.api.gps.gps_node:main

